# webpages

./: .gitignore  README.md  broken.html
jaq/: AGENTS.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  ZAQ_ENHANCEMENT_ROADMAP.md  build.zig  complex_queries.sh  zaq
jaq/json-loader-server/: Cargo.toml  Cargo.toml.bak  Cargo.toml.no_xlsx  DSL_ALL_REPORTS_COMPLETE.md  DSL_EXTENSION_SPEC.md  SAVED_QUERIES_GUIDE.md  query_all.sh  query_product.sh  query_raw.sh  query_skip_nulls.sh  sku_comparison_query.json  start.sh  test_parse.js  view_schemas.py  view_schemas.sh
jaq/json-loader-server/dsl_examples/: 01_orders_guid_list.dsl.json  02_payments_guid_list.dsl.json  04_time_entries_with_hours_worked.dsl.json  05_employee_jobs_exploded.dsl.json  07_nested_aggregation_concept.dsl.json  32_primitive_value_orders.dsl.json  40_net_sales_by_employee.dsl.json  43_discounts_daily.dsl.json
jaq/json-loader-server/scripts/: save_all_queries.sh
jaq/json-loader-server/src/: html_page.html  html_page.html.bak  main.rs  main.rs.bak  query_engine.rs
jaq2/: test_data.json
jaq2/json-loader-server/: AGENTS.md  Cargo.toml  DSL_IMPLEMENTATION_COMPLETE.md  DSL_IMPLEMENTATION_GUIDE.md  DSL_IMPLEMENTATION_STATUS.md  DSL_REVIEW_SUMMARY.md  FUNCTIONAL_DSL_ROADMAP.md  LEARN_PAGE_UPDATES.md  PHASE1_STATUS.md  PHASE2_STATUS.md  PHASES_1_2_3_4_STATUS.md  README.md  TESTING.md  WORKING_QUERIES.md  json_objects.json  json_objects.sh  query.sh  query_explore.sh  query_feather_place.sh  schema.json  skip_nulls_result.json  start.sh  test_skip_nulls.sh  test_skip_nulls_simple.sh
jaq2/json-loader-server/benches/: query_benchmark.rs
jaq2/json-loader-server/dsl_examples/: 03_time_entries_hourly.dsl.json  06_cash_entries_by_type.dsl.json  30_item_mix_report.dsl.json  31_hourly_shifts.dsl.json  41_hourly_sales.dsl.json  42_category_sales.dsl.json  expression_demo.json  higher_order_demo.json  user_function_demo.json
jaq2/json-loader-server/scripts/: load_orders_to_datalake.py
jaq2/json-loader-server/src/: app.rs  context.rs  expression.rs  functions.rs  html_page.html  lib.rs  main.rs  main.rs.bak  query_engine.rs  query_engine_tests.rs  test_utils.rs
jaq2/json-loader-server/tests/: integration_tests.rs
toasty/: .env.example  .gitignore  AGENTS.md  DATA_IMPORT_SUMMARY.md  OrderDetails_2025_08_07.csv  app.py  cleardb.py  debug_submissions.go  extract_mary_activity.py  fix_toast_indices.go  fix_toast_labor_indices.go  get_toast.py  process_new_data.py  requirements.txt  resume.txt  start.sh  test_api.py  test_query.go  test_read_submission.go  toast_client.py  (+1 more)
(+122 files in other folders)
