[package]
name = "json-loader-server"
version = "0.1.0"
edition = "2021"

[features]
default = []
xlsx = ["xlsxwriter"]

[dependencies]
# Web server
axum = "0.6"
tokio = { version = "1.35", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
hyper = { version = "0.14", features = ["full"] }

# Database
rusqlite = { version = "0.30", features = ["bundled"] }

# jaq library from workspace
jaq-core = { workspace = true }
jaq-std  = { workspace = true }
jaq-json = { workspace = true }
jaq-all  = { workspace = true }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
anyhow = "1.0"

# Bytes for string conversion
bytes = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Export formats
csv = "1.3"
xlsxwriter = { version = "0.6", optional = true }

# HTTP client for AI API
reqwest = { version = "0.11", features = ["json"] }
regex = "1.0"
